tests/ui/error-codes/E0657.stderr
error[E0657]: `impl Trait` cannot capture higher-ranked lifetime from `dyn` type
  --> $DIR/E0657.rs:10:35
   |
LL |     -> Box<dyn for<'a> Id<impl Lt<'a>>>
   |                                   ^^
   |
note: lifetime declared here
  --> $DIR/E0657.rs:10:20
   |
LL |     -> Box<dyn for<'a> Id<impl Lt<'a>>>
   |                    ^^

error[E0657]: `impl Trait` cannot capture higher-ranked lifetime from `dyn` type
  --> $DIR/E0657.rs:19:39
   |
LL |         -> Box<dyn for<'a> Id<impl Lt<'a>>>
   |                                       ^^
   |
note: lifetime declared here
  --> $DIR/E0657.rs:19:24
   |
LL |         -> Box<dyn for<'a> Id<impl Lt<'a>>>
   |                        ^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0657`.
